--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.openpnp</groupId>
             <artifactId>opencv</artifactId>
-            <version>[4.3.0,)</version>
+            <version>2.4.13-0</version>
         </dependency>
     </dependencies>
 
